# transformer

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  OPEN_SOURCE.md  README.md  RESULTS.md  RESULTS_BENCHMARK.md  RESULTS_PUBLIC.md  ROADMAP.md  SECURITY.md  implementation.md  plan.md  pyproject.toml  tfs-server.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
registry/: registry.json
src/transformer_from_scratch/: __init__.py  __main__.py  api.py  attention.py  baselines.py  benchmark.py  checkpoint.py  config.py  data.py  demo.py  generation.py  model.py  optim.py  prepare_synthetic.py  public_benchmark.py  public_data.py  public_eval.py  registrable.py  registry.py  train.py  utils.py  webapp.py
src/transformer_from_scratch/tests/: test_api.py  test_config.py  test_demo.py  test_model_forward.py  test_public_data.py  test_training_smoke.py
versions/: v1.md
