[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "A compact Transformer language model built from scratch"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch",
  "numpy",
  "pyyaml",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "ruff",
  "pytest",
  "httpx",
]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.0",
  "psutil>=5.9",
]

[project.scripts]
tfs-train = "transformer_from_scratch.train:main"
tfs-generate = "transformer_from_scratch.prepare_synthetic:main"
tfs-benchmark = "transformer_from_scratch.benchmark:main"
tfs-demo = "transformer_from_scratch.demo:main"
tfs-sample = "transformer_from_scratch.generation:main"
tfs-public-eval = "transformer_from_scratch.public_eval:main"
tfs-public-benchmark = "transformer_from_scratch.public_benchmark:main"
tfs-serve = "transformer_from_scratch.api:main"
tfs-web = "transformer_from_scratch.webapp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["src/transformer_from_scratch/tests"]
